      alphabetically again, by their name, just like regular columns are. If you use prepared statements and
      SELECT * queries, and have both simple and collection static columns in those tables, and are upgrading from an
      earlier 3.0 version, then you might be affected by this change. Please see CASSANDRA-14638 for details.

3.11.3
=====

Upgrading
---------
    - Materialized view users upgrading from 3.0.15 (3.0.X series) or 3.11.1 (3.11.X series) and
      later that have performed range movements (join, decommission, move, etc), should run repair
      on the base tables, and subsequently on the views to ensure data affected by CASSANDRA-14251
      is correctly propagated to all replicas.
    - Changes to bloom_filter_fp_chance will no longer take effect on existing sstables when the
      node is restarted. Only compactions/upgradesstables regenerates bloom filters and Summaries
      sstable components. See CASSANDRA-11163

Deprecation
-----------
    - Background read repair has been deprecated. dclocal_read_repair_chance and read_repair_chance
      table options have been deprecated, and will be removed entirely in 4.0. See CASSANDRA-13910
      for details.

3.11.2
======

Upgrading
---------
   - See MAXIMUM TTL EXPIRATION DATE NOTICE above.
    - Cassandra is now relying on the JVM options to properly shutdown on OutOfMemoryError. By default it will
      rely on the OnOutOfMemoryError option as the ExitOnOutOfMemoryError and CrashOnOutOfMemoryError options
      are not supported by the older 1.7 and 1.8 JVMs. A warning will be logged at startup if none of those JVM
      options are used. See CASSANDRA-13006 for more details
    - Cassandra is not logging anymore by default an Heap histogram on OutOfMemoryError. To enable that behavior
      set the 'cassandra.printHeapHistogramOnOutOfMemoryError' System property to 'true'. See CASSANDRA-13006
      for more details.