@@ -52,6 +52,14 @@ Upgrading
       SELECT * queries, and have both simple and collection static columns in those tables, and are upgrading from an
       earlier 3.0 version, then you might be affected by this change. Please see CASSANDRA-14638 for details.
 
+Experimental features
+---------------------
+    - An 'enable_sasi_indexes' flag, true by default, has been added to cassandra.yaml to allow operators to prevent
+      the creation of new SASI indexes, which are considered experimental and are not recommended for production use.
+      (See https://www.mail-archive.com/dev@cassandra.apache.org/msg13582.html)
+    - The flags 'enable_sasi_indexes' and 'enable_materialized_views' have been grouped under an experimental features
+      section in cassandra.yaml.
+
 3.11.3
 =====
 
